Child launcher should also use --add-modules=ALL-DEFAULT.